--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -5,9 +5,6 @@ ruby "3.3.9"
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.1.5"
 
-# Use mysql as the database for Active Record
-gem "mysql2", "~> 0.5"
-
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", ">= 5.0"
 
@@ -40,6 +37,9 @@ gem "jwt"
 
 # HTTP client
 gem "httparty"
+
+# AWS SDK for DynamoDB
+gem "aws-sdk-dynamodb", "~> 1.0"
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
