--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,6 @@
 version: '3.8'
 
 services:
-  db:
-    image: mysql:8.0
-    platform: linux/x86_64
-    container_name: quacknote_db
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: quacknote_development
-      TZ: 'Asia/Tokyo'
-    ports:
-      - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
-    command: --default-authentication-plugin=mysql_native_password
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-ppassword"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
   backend:
     build:
       context: ./backend
@@ -33,13 +14,8 @@ services:
       - "3000:3000"
     environment:
       RAILS_ENV: development
-      DATABASE_HOST: db
-      DATABASE_USERNAME: root
-      DATABASE_PASSWORD: password
-      DATABASE_NAME: quacknote_development
-    depends_on:
-      db:
-        condition: service_healthy
+      AWS_REGION: ap-northeast-1
+      DYNAMODB_USERS_TABLE: dev_quacknote_users
     stdin_open: true
     tty: true
 
@@ -61,5 +37,4 @@ services:
     tty: true
 
 volumes:
-  mysql_data:
   bundle_cache:
