自作signupUI作成 cognito連携

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -41,6 +41,9 @@ gem "httparty"
 # AWS SDK for DynamoDB
 gem "aws-sdk-dynamodb", "~> 1.0"
 
+# AWS SDK for Cognitoj
+gem "aws-sdk-cognitoidentityprovider", "~> 1.0"
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ]
